bonus/confs/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ui
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
    - host: gitlab.concombre.toboggan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-webservice-default
                port:
                  number: 8181
